--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+
+    <color name="THEOWhite">#FFFFFF</color>
+    <color name="THEOBlue">#3380FF</color>
+    <color name="THEOGray">#393939</color>
+    <color name="THEOYellow">#FFC41C</color>
+    <color name="THEOYellowAlt">#FFB400</color>
 </resources>
